--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@lesnoypudge/builder",
-    "version": "1.0.1",
+    "version": "1.0.2",
+    "type": "module",
     "main": "./build/index.js",
     "bin": {
-        "builder": "./build/index.js"
+        "builder": "node ./build/index.js"
     },
     "scripts": {
         "publish": "npm publish --access public",
