--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,22 +24,14 @@
 
         "noEmit": false,
 
-        // "moduleResolution": "NodeNext",
-        // "module": "NodeNext",
-        // "outDir": "dist",
-        // "sourceMap": true,
-        // "declaration": true,
-
         "moduleResolution": "Bundler",
         "module": "ESNext",
         "outDir": "build",
-        "sourceMap": true,
-        "declaration": true,
+        "sourceMap": false,
+        "declaration": false,
 
         "lib": [
             "ES2022",
-            // "DOM",
-            // "DOM.Iterable",
         ],
     }
 }
