--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lesnoypudge/builder",
-    "version": "1.0.5",
+    "version": "2.0.0",
     "type": "module",
     "main": "./build/index.js",
     "bin": {
@@ -9,7 +9,7 @@
     "scripts": {
         "publish": "npm publish --access public",
         "deploy": "git add . && git commit -m 'update' && git push && git status",
-        "build": "node --experimental-strip-types ./src/index.ts"
+        "build": "node --experimental-strip-types ./src/index.ts --file tsconfig.build.json"
     },
     "keywords": [
         "lesnoypudge",
@@ -19,12 +19,14 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "@lesnoypudge/formatter-config": "^3.2.0",
-        "@types/node": "^22.6.1",
-        "typescript": "^5.6.2"
+        "@lesnoypudge/formatter-config": "^5.0.0",
+        "@types/node": "^22.9.0",
+        "@types/yargs": "^17.0.33"
     },
     "dependencies": {
-        "@lesnoypudge/utils": "^12.4.2",
-        "tsc-alias": "^1.8.10"
+        "@lesnoypudge/utils": "^14.1.0",
+        "tsc-alias": "^1.8.10",
+        "typescript": "^5.6.3",
+        "yargs": "^17.7.2"
     }
 }
