--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lesnoypudge/builder",
-    "version": "3.0.5",
+    "version": "4.0.0",
     "type": "module",
     "main": "./build/builder.js",
     "bin": {
@@ -15,6 +15,9 @@
     "keywords": [
         "lesnoypudge",
         "builder"
+    ],
+    "files": [
+        "build"
     ],
     "author": "LesnoyPudge",
     "license": "ISC",
