--- a/tsconfig.node.build.json
+++ b/tsconfig.node.build.json
@@ -4,11 +4,6 @@
         "src/**/*"
     ],
     "exclude": [
-        "src/**/*.test.*",
-        "src/**/test*",
+        "src/**/*.test.*"
     ],
-    "compilerOptions": {
-        "noEmit": false,
-        "declaration": false,
-    }
 }
