--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,9 @@
         "module": "ESNext",
         "moduleResolution": "Bundler",
         "baseUrl": ".",
-        "paths": {},
+        "paths": {
+            // "@root": ["src/index.ts"]
+        },
         "types": [],
         "resolveJsonModule": true,
         "noUncheckedSideEffectImports": true,
