--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,15 +1,15 @@
 {
     "extends": "./tsconfig.base.json",
     "include": [
-        "src/**/*",
-        "node_modules/@types"
+        "./src/**/*",
+        "node_modules/@types",
+        "./vite.config.ts"
     ],
     "exclude": [],
     "compilerOptions": {
         "types": [
             "@lesnoypudge/types-global-base",
             "@lesnoypudge/types-global-node",
-        ],
-        "allowImportingTsExtensions": true,
+        ]
     }
 }
